// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GDatePicker should match snapshot 1`] = `
<date-picker-stub
  class="g-date-picker"
  clearable="true"
  confirmtext="OK"
  disableddate="function _default() {
          return false;
        }"
  disabledtime="function _default() {
          return false;
        }"
  editable="true"
  format="DD.MM.YYYY"
  getclasses="function _default() {
          return [];
        }"
  hourstep="1"
  inputattr="[object Object]"
  lang="[object Object]"
  minutestep="1"
  placeholder="Başlangıç Tarihi"
  popupstyle="[object Object]"
  prefixclass="mx"
  scrollduration="100"
  secondstep="1"
  separator=" - "
  shortcuts=""
  timetitleformat="YYYY-MM-DD"
  titleformat="YYYY-MM-DD"
  type="date"
  valuetype="date"
>
  <template>
    <g-input-stub
      disabled="true"
      feedback=""
      icon=""
      iconposition=""
      label="Başlangıç Tarihi"
      size="big"
      type="text"
    />
  </template>
</date-picker-stub>
`;

exports[`GDatePicker should match snapshot check attributes object 1`] = `
<date-picker-stub
  class="g-date-picker"
  clearable="true"
  confirmtext="OK"
  disableddate="function _default() {
          return false;
        }"
  disabledtime="function _default() {
          return false;
        }"
  editable="true"
  format="YYYY.DD.MM"
  getclasses="function _default() {
          return [];
        }"
  hourstep="1"
  inputattr="[object Object]"
  lang="[object Object]"
  minutestep="1"
  placeholder="StartDate"
  popupstyle="[object Object]"
  prefixclass="mx"
  scrollduration="100"
  secondstep="1"
  separator=" - "
  shortcuts=""
  timetitleformat="YYYY-MM-DD"
  titleformat="YYYY-MM-DD"
  type="date"
  valuetype="date"
>
  <template>
    <g-input-stub
      disabled="true"
      feedback=""
      icon=""
      iconposition=""
      label="StartDate"
      size="big"
      type="text"
    />
  </template>
</date-picker-stub>
`;
